LG-49 Fix Calendar
  - fixed overlapping sidebar
  - fixed problem with glitchy mobile mode
  - adjusted font size and style to make mobile mode more usable

--- a/web/themes/custom/lex/scss/_calendar.scss
+++ b/web/themes/custom/lex/scss/_calendar.scss
@@ -276,7 +276,7 @@
 .calendar-key {
   margin-right: 5px;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 
   .meeting-dot {
     color: rgb(81, 164, 124);
